# movie-snatcher

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requests.http  runner.py
app/: __init__.py  models.py  routes.py  storage.py
app/services/: movies.py
app/views/: movies_views.py
db/: postgres-init.sql
tests/: test_routes.py
